# claudewire

./: .gitignore  Cargo.toml  LICENSE  PROTOCOL.md  RE.md  README.md  claude-session-architecture.md
py/: README.md  pyproject.toml
py/claudewire/: __init__.py  config.py  direct.py  permissions.py  transport.py  types.py
py/tests/: conftest.py  test_config.py  test_events.py  test_integration.py  test_permissions.py  test_schema.py
rs/src/: lib.rs  session.rs
