[package]
name = "claudewire"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
integration = []

[lib]
path = "rs/src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
which = "7"

[[test]]
name = "real_cli"
path = "rs/tests/real_cli.rs"
