[project]
name = "claudewire"
version = "0.1.0"
description = "Claude CLI stream-json protocol wrapper"
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-api>=1.20",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claudewire"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that require the real Claude CLI binary on PATH",
]
